--- a/assets/pdf/cv/Sanghyun-cv.tex
+++ b/assets/pdf/cv/Sanghyun-cv.tex
@@ -180,7 +180,7 @@ Centre National de la Recherche Scientifique (CNRS)
 \vspace*{-.05in}
 \item[\checkmark] Using operational-space controller [C2]
 \vspace*{-.05in}
-\item[\checkmark] Using hierarchical QP-based controller [J5]
+\item[\checkmark] Using hierarchical QP-based controller [J4]
 \vspace*{-.05in}
 \item[\checkmark] Using DDP-based controller
 \vspace*{-.05in}
@@ -206,7 +206,7 @@ Centre National de la Recherche Scientifique (CNRS)
 \item (Ongoing Work) Applying the task transition method to operate mobile-based humanoid
 \begin{itemize}
 \vspace*{-.05in}
-\item[\checkmark] Development controller for archiving complex tasks [C7]
+\item[\checkmark] Development controller for archiving complex tasks [C8]
 \vspace*{-.05in}
 \item[\checkmark] Self-collision avoidance algorithm using the concept of attractive force [O1]
 \vspace*{-.05in}
@@ -235,12 +235,12 @@ Centre National de la Recherche Scientifique (CNRS)
 \vspace*{-.05in}
 \item[\checkmark] using Jacobian-based inverse kinematics controller [J2, J4, C3, W2]
 \vspace*{-.05in}
-\item[\checkmark] using Forward And Backward Reaching Inverse Kinematics (FABRIK) [C6]
+\item[\checkmark] using Forward And Backward Reaching Inverse Kinematics (FABRIK) [C7]
 \vspace*{-.05in}
-\item[\checkmark] using Recursive Neural Network (RNN) [C4]
+\item[\checkmark] using Recursive Neural Network (RNN) [C5]
 \vspace*{-.05in}
 \end{itemize}
-\item Disturbance observer to enhance balancing performance [C5]
+\item Disturbance observer to enhance balancing performance [C6]
 \begin{itemize}
 \vspace*{-.05in}
 \item[\checkmark] Feed-forward joint disturbance observer for compliant motion
@@ -296,7 +296,7 @@ Centre National de la Recherche Scientifique (CNRS)
 \item[\checkmark] Video: \url{https://youtu.be/QzGgV9KHaZI}
 \vspace*{-.05in}
 \end{itemize}
-\item Grasping Force Estimation using sEMG signals [J6]
+\item Grasping Force Estimation using sEMG signals [J5]
 \end{list2}
 
 \textbf{\emph { Tele-opeartion control of ultrasonic examination system}} \hfill {\bf 2012  - 2013}
@@ -381,18 +381,14 @@ Korea Patent, No.10-2016-0011876, 2016.
 \section{\sc International Journal Articles}
 
 
-[J6] \textbf{S. Kim}, M. Kim, J. Kim, S, Kim, and J. Park.
+[J5] \textbf{S. Kim}, M. Kim, J. Kim, S, Kim, and J. Park.
 Grasping Force Prediction by EMG Signals and Arm Posture: Tensor Decomposition Based Approach,
 International Journal of Bionic Engineering, accepted, 2019
 
-[J5] \textbf{S. Kim}, K. Jang, S. Park, Y. Lee, S. Y. Lee, and J. Park, Continuous Task Transition Approach for Robot Controller based on Hierarchical Quadratic Programming, IEEE Robotics and Automation Letters (with International Conference on Robotics and Automation 2019), Vol. 4, No. 2, pp. 1603-1610, 2019.05
+[J4] \textbf{S. Kim}, K. Jang, S. Park, Y. Lee, S. Y. Lee, and J. Park, Continuous Task Transition Approach for Robot Controller based on Hierarchical Quadratic Programming, IEEE Robotics and Automation Letters (with International Conference on Robotics and Automation 2019), Vol. 4, No. 2, pp. 1603-1610, 2019.05
 
-[J4] \textbf{S. Kim}, M. Kim, J. Lee, S. Hwang, J. Chae, B. Park, H. Cho, J. Sim, J. Jung, H. Lee, S. Shin, M. Kim, W. Choi, Y. Lee, S. Park, J. Oh, Y. Lee, S. Lee, M. Lee, S. Yi, K. Chang, N. Kwak, and {J. Park}.
+[J3] \textbf{S. Kim}, M. Kim, J. Lee, S. Hwang, J. Chae, B. Park, H. Cho, J. Sim, J. Jung, H. Lee, S. Shin, M. Kim, W. Choi, Y. Lee, S. Park, J. Oh, Y. Lee, S. Lee, M. Lee, S. Yi, K. Chang, N. Kwak, and {J. Park}.
 Team SNU’s Control Strategies to Enhancing Robot’s Capability: Lessons from the DARPA Robotics Challenge Finals 2015, The DARPA Robotics Challenge Finals: Humanoid Robots to the Rescue, Springer, pp. 347-379, 2018.04
-
-[J3] J. Jung, J. Kim, \textbf{S. Kim}, W. Kwon, S. Na, K. Kim, J. Lee, G. Suh, and J. Park.
-Application of Robot Manipulator for Cardiopulmonary Resuscitation, Experimantal Robotics
-(with International Symposium on Experimental Robotics 2016), Springer, pp. 266-274, 2017.03
 
 [J2] \textbf{S. Kim}, M. Kim, J. Lee, S. Hwang, J. Chae, B. Park, H. Cho, J. Sim, J. Jung, H. Lee, S. Shin, M. Kim, W. Choi, Y. Lee, S. Park, J. Oh, Y. Lee, S. Lee, M. Lee, S. Yi, K. Chang, N. Kwak, and {J. Park}.
 Team SNU’s Control Strategies to Enhancing Robot’s Capability: Lessons from the 2015 DARPA Robotics Challenge Finals. Journal of Field Robotics, Vol. 34, No. 2, pp. 359-380, 2017.03
@@ -402,20 +398,24 @@ Robot Hand Synergy Mapping Using Multi-factor Model and EMG signal.
 (with International Symposium on Experimental Robotics 2014), Springer, pp.671-683, 2015.11
 
 \section{\sc International Conference Articles}
-[C7] \textbf{S. Kim}, K. Jang, S. Park, Y. Lee, S. Y. Lee, and J. Park, Whole-body Control of Non-holonomic Mobile Manipulator Based on Hierarchical Quadratic Programming and Continuous Task Transition. IEEE International Conference on Advanced Robotics and Mechatronics (ARM), Osaka, Japan, 2019.
+[C8] \textbf{S. Kim}, K. Jang, S. Park, Y. Lee, S. Y. Lee, and J. Park, Whole-body Control of Non-holonomic Mobile Manipulator Based on Hierarchical Quadratic Programming and Continuous Task Transition. IEEE International Conference on Advanced Robotics and Mechatronics (ARM), Osaka, Japan, 2019.
 
-[C6] \textbf{S. Kim}, J. Kim, and J. Park.
+[C7] \textbf{S. Kim}, J. Kim, and J. Park.
 Real-time Inverse Kinematics Technique for Controlling Humanoid Avatar with Redundant Arm,
 Ubiquitous Robot 2018, Hawaii, USA, 2018.
 
-[C5] M. Kim, J. Kim, \textbf{S. Kim}, J. Sim, and J. Park.
+[C6] M. Kim, J. Kim, \textbf{S. Kim}, J. Sim, and J. Park.
 Disturbance Observer based Linear Feedback Controller for Compliant Motion of Humanoid Robot,
 International Conference on Robotics and Automation (ICRA), Australia, 2018.
 
-[C4] M. Kim, \textbf{S. Kim}, and {J. Park}.
+[C5] M. Kim, \textbf{S. Kim}, and {J. Park}.
 Human Motion Imitation for Humanoid by Recurrent Neural Network.
 The 13th International Conference on Ubiquitous Robots and Ambient Intelligence,
 Xian, China, 19-22 Aug, 2017.
+
+
+[C4] J. Jung, J. Kim, \textbf{S. Kim}, W. Kwon, S. Na, K. Kim, J. Lee, G. Suh, and J. Park.
+Application of Robot Manipulator for Cardiopulmonary Resuscitation,  International Symposium on Experimental Robotics 2016, Springer, pp. 266-274, 2017.03
 
 [C3] \textbf{S. Kim}, M. Kim, J. Lee, S. Hwang, J. Chae, B. Park, H. Cho, J. Sim, J. Jung, H. Lee, S. Shin, M. Kim, N. Kwak, Y. Lee, S. Lee, M. Lee, S. Yi, K. K.C. Chang, and {J. Park}.
 Approach of Team SNU to the DARPA Robotics Challenge Finals.
