--- a/assets/pdf/cv/Sanghyun-cv.tex
+++ b/assets/pdf/cv/Sanghyun-cv.tex
@@ -383,7 +383,7 @@ Korea Patent, No.10-2016-0011876, 2016.
 
 [J5] \textbf{S. Kim}, M. Kim, J. Kim, S, Kim, and J. Park.
 Grasping Force Prediction by EMG Signals and Arm Posture: Tensor Decomposition Based Approach,
-International Journal of Bionic Engineering, Vol. 16, No. 3, pp.  455-467, 2019.05
+Journal of Bionic Engineering, Vol. 16, No. 3, pp.  455-467, 2019.05
 
 [J4] \textbf{S. Kim}, K. Jang, S. Park, Y. Lee, S. Y. Lee, and J. Park, Continuous Task Transition Approach for Robot Controller based on Hierarchical Quadratic Programming, IEEE Robotics and Automation Letters (with International Conference on Robotics and Automation 2019), Vol. 4, No. 2, pp. 1603-1610, 2019.05
 
