--- a/assets/pdf/cv/Sanghyun-cv.tex
+++ b/assets/pdf/cv/Sanghyun-cv.tex
@@ -358,6 +358,7 @@ Centre National de la Recherche Scientifique (CNRS)
 \end{list2}
 
 \section{\sc Honors and Awards} 
+\textbf{Best paper award Finalist} in IEEE international conference on Advanced Robotics and mechatronics. \\
 \textbf{Korean government grant} for Visiting Scholar of LAAS-CNRS, 2018. \\
 \textbf{Best paper award} in Journal of Korea Robotics Society (JKROS), 2018.\\
 \textbf{Cum laude} from Dept. of Mechanical Engineering at Seoul National University, 2012. 
