--- a/assets/pdf/cv/Sanghyun-cv.tex
+++ b/assets/pdf/cv/Sanghyun-cv.tex
@@ -91,7 +91,7 @@ Centre National de la Recherche Scientifique (CNRS)
 \end{list1}
 
 \section{\sc Visiting \\ Experience}
-{\bf Centre National de la Recherche Scientifique (CNRS)}, France  \hfill {\bf 2018.8 - Presence} \\
+{\bf Centre National de la Recherche Scientifique (CNRS)}, France  \hfill {\bf 2018.8 - 2019.6} \\
 \vspace*{-.1in}
 \begin{list1}
 \vspace*{-.05in}
@@ -358,7 +358,7 @@ Centre National de la Recherche Scientifique (CNRS)
 \end{list2}
 
 \section{\sc Honors and Awards} 
-\textbf{Best paper award Finalist} in IEEE international conference on Advanced Robotics and mechatronics. \\
+\textbf{Best conference paper award} in IEEE/ASME International Conference on Advanced Robotics and mechatronics, 2019.\\
 \textbf{Korean government grant} for Visiting Scholar of LAAS-CNRS, 2018. \\
 \textbf{Best paper award} in Journal of Korea Robotics Society (JKROS), 2018.\\
 \textbf{Cum laude} from Dept. of Mechanical Engineering at Seoul National University, 2012. 
@@ -399,7 +399,7 @@ Robot Hand Synergy Mapping Using Multi-factor Model and EMG signal.
 (with International Symposium on Experimental Robotics 2014), Springer, pp.671-683, 2015.11
 
 \section{\sc International Conference Articles}
-[C8] \textbf{S. Kim}, K. Jang, S. Park, Y. Lee, S. Y. Lee, and J. Park, Whole-body Control of Non-holonomic Mobile Manipulator Based on Hierarchical Quadratic Programming and Continuous Task Transition. IEEE International Conference on Advanced Robotics and Mechatronics (ARM), Osaka, Japan, 2019.
+[C8] \textbf{S. Kim}, K. Jang, S. Park, Y. Lee, S. Y. Lee, and J. Park, Whole-body Control of Non-holonomic Mobile Manipulator Based on Hierarchical Quadratic Programming and Continuous Task Transition. IEEE International Conference on Advanced Robotics and Mechatronics (ARM), Osaka, Japan, 2019, \textbf{Best Conference Paper Award}
 
 [C7] \textbf{S. Kim}, J. Kim, and J. Park.
 Real-time Inverse Kinematics Technique for Controlling Humanoid Avatar with Redundant Arm,
@@ -508,10 +508,10 @@ Full-day Tutorial on Robotics-based Methods for the Identification, Recognition,
 IEEE/RSJ International Conference on Intelligent Robots and Systems, 
 Tokyo, Japan, 3 Nov 2013.
 
-\section{\sc Ongoing Papers}
-
-[O1] K. Jang, \textbf{S. Kim},  S. Park, S. Kim, and J. Park, Real-Time Self-Collision Avoidance based on Attractive Force and Torque for Differentially Driven Mobile Manipulators, 
-IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), under review, 2019.
+%\section{\sc Ongoing Papers}
+%
+%[O1] K. Jang, \textbf{S. Kim},  S. Park, S. Kim, and J. Park, Real-Time Self-Collision Avoidance based on Attractive Force and Torque for Differentially Driven Mobile Manipulators, 
+%IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), under review, 2019.
 
 \section{\sc Academic \\Services}
 
