--- a/assets/pdf/cv/Sanghyun-cv.tex
+++ b/assets/pdf/cv/Sanghyun-cv.tex
@@ -42,10 +42,10 @@
 \textbf{Ph.D. Candidate} (expected in 2020.2) at the Department of Transdisciplinary Studies,\\
 Graduate School of Convergence Science and Technology, \\
 Seoul National University \\
-\\
-\textbf{Visiting Researcher} (until 2019.6) at the Gepetto Team,\\
-Laboratory for Analysis and Architecture of Systems (LAAS), \\
-Centre National de la Recherche Scientifique (CNRS) 
+%\\
+%\textbf{Visiting Researcher} (until 2019.6) at the Gepetto Team,\\
+%Laboratory for Analysis and Architecture of Systems (LAAS), \\
+%Centre National de la Recherche Scientifique (CNRS) 
 
 %Research Associate at Stanford Artificial Intelligence Laboratory\\
 %Computer Science Department, Stanford University
@@ -57,9 +57,9 @@ Centre National de la Recherche Scientifique (CNRS)
 %Stanford University & {\it E-mail:}  park73@ai.stanford.edu\\       
 %Stanford, CA  94305 USA  & {\it WWW:} ai.stanford.edu/\verb+~+park73 \\     
 %\end{tabular}
-{\it Address:} 23 Avenue Edouard, 31400, Toulouse, France \\
+{\it Address:} Gwanggyo-ro 145 D-312, Suwon, Seoul \\
 {\it E-mail:}  ggory15@snu.ac.kr\\       
-{\it Phone:}  82-10-5366-4998 (Korea), 33-07-68-79-58-27 (France)\\            
+{\it Phone:}  82-10-5366-4998 (Korea)\\            
 {\it WWW:}  \url{http://ggory15.github.io} \textit{(for my projects)}, \url{http://github.com/ggory15} \textit{(for source codes)}
 
 
@@ -358,7 +358,7 @@ Centre National de la Recherche Scientifique (CNRS)
 \end{list2}
 
 \section{\sc Honors and Awards} 
-\textbf{Best conference paper award} in IEEE/ASME International Conference on Advanced Robotics and mechatronics, 2019.\\
+\textbf{Best conference paper award} in IEEE/ASME International Conference on Advanced Robotics and Mechatronics, 2019.\\
 \textbf{Korean government grant} for Visiting Scholar of LAAS-CNRS, 2018. \\
 \textbf{Best paper award} in Journal of Korea Robotics Society (JKROS), 2018.\\
 \textbf{Cum laude} from Dept. of Mechanical Engineering at Seoul National University, 2012. 
@@ -518,8 +518,8 @@ Tokyo, Japan, 3 Nov 2013.
 Reviewer for IEEE Robotics and Automation Letters (RAL), 2015. \\
 Reviewer for IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2018. \\
 Reviewer for IEEE International Conference on Ubiquitous Robots (UR), 2018.\\
-Reviewer for International Conference on Robotics and Automation (ICRA), 2019. \\
-
+Reviewer for IEEE International Conference on Robotics and Automation (ICRA), 2019. \\
+Reviewer for IEEE Robotics and Automation Letters (RAL), 2019. \\
 \end{resume}
 \end{document}
 
