--- a/assets/pdf/cv/Sanghyun-cv.tex
+++ b/assets/pdf/cv/Sanghyun-cv.tex
@@ -161,32 +161,7 @@ Seoul National University \\
 {\bf During Ph.D. student}
  
 \vspace{-.3cm}
-\textbf{\emph { Whole-body Control of Torque-controlled Humanoids}} \hfill {\bf 2014 - Presence}
-\begin{list2}
-\item Design and development of torque-controlled humanoid, DYROS-Red [C2].
-\begin{itemize}
-\vspace*{-.05in}
-\item[\checkmark] EtherCAT and RTX programming for real-time control
-\vspace*{-.05in}
-\item[\checkmark] High-level controller: Whole-body controller
-\vspace*{-.05in}
-\item[\checkmark] Low-level controller: Elmo motion controller
-\vspace*{-.05in}
-\item[\checkmark] Video : \url{https://youtu.be/01E-rKixNfE}
-\vspace*{-.05in}
-\end{itemize}
-\item Implementation of whole-body controllers for torque-controlled humanoids.
-\begin{itemize}
-\vspace*{-.05in}
-\item[\checkmark] Using operational-space controller [C2]
-\vspace*{-.05in}
-\item[\checkmark] Using hierarchical QP-based controller [J4]
-\vspace*{-.05in}
-\item[\checkmark] Using DDP-based controller
-\vspace*{-.05in}
-\end{itemize}
-\item (Ongoing Work) Development contact force generator with multi-constraints for dynamic balance. 
-\end{list2}
+
 
 \textbf{\emph { Multiple Task Execution Algorithm}} \hfill  {\bf 2017  - Presence}
 \begin{list2}
@@ -214,6 +189,33 @@ Seoul National University \\
 \vspace*{-.05in}
 \end{itemize}
 \item (Ongoing Work) Multi-contact transition for humanoids using Gravito-Inertial Wrench Cone (GIWC)
+\end{list2}
+
+\textbf{\emph { Whole-body Control of Torque-controlled Humanoids}} \hfill {\bf 2014 - Presence}
+\begin{list2}
+\item Design and development of torque-controlled humanoid, DYROS-Red [C2].
+\begin{itemize}
+\vspace*{-.05in}
+\item[\checkmark] EtherCAT and RTX programming for real-time control
+\vspace*{-.05in}
+\item[\checkmark] High-level controller: Whole-body controller
+\vspace*{-.05in}
+\item[\checkmark] Low-level controller: Elmo motion controller
+\vspace*{-.05in}
+\item[\checkmark] Video : \url{https://youtu.be/01E-rKixNfE}
+\vspace*{-.05in}
+\end{itemize}
+\item Implementation of whole-body controllers for torque-controlled humanoids.
+\begin{itemize}
+\vspace*{-.05in}
+\item[\checkmark] Using operational-space controller [C2]
+\vspace*{-.05in}
+\item[\checkmark] Using hierarchical QP-based controller [J4]
+\vspace*{-.05in}
+\item[\checkmark] Using DDP-based controller
+\vspace*{-.05in}
+\end{itemize}
+\item (Ongoing Work) Development contact force generator with multi-constraints for dynamic balance. 
 \end{list2}
 
 \textbf{\emph { Control of Position-controlled Humanoids}} \hfill {\bf 2014  - 2018}
@@ -331,11 +333,13 @@ Seoul National University \\
 \item Position controlled robot, \textit{HRP-2}
 \end{list2}
 \vspace{-0.3cm}
+
 \textbf{\emph { Mobile-based Humanoids}}
 \begin{list2}
 \item Four-wheeled mobile base, \textit{Husky}, with 7-DoF arm, \textit{Franka Panda}
 \end{list2}
 \vspace{-0.3cm}
+
 \textbf{\emph { Manipulator}}
 \begin{list2}
 \item 7-DoF arm, \textit{Franka Panda}
@@ -508,10 +512,10 @@ Full-day Tutorial on Robotics-based Methods for the Identification, Recognition,
 IEEE/RSJ International Conference on Intelligent Robots and Systems, 
 Tokyo, Japan, 3 Nov 2013.
 
-%\section{\sc Ongoing Papers}
-%
-%[O1] K. Jang, \textbf{S. Kim},  S. Park, S. Kim, and J. Park, Real-Time Self-Collision Avoidance based on Attractive Force and Torque for Differentially Driven Mobile Manipulators, 
-%IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), under review, 2019.
+\section{\sc Ongoing Papers}
+
+[O1] Y. Lee, \textbf{S. Kim},  J. Park, N. Tsagarakis, and J. Lee, EOS-WBC: Enhanced Operational-space Based Whole Body Control Framework under Inequality Constraints, 
+IEEE Transactions on Robotics, under review, 2019.
 
 \section{\sc Academic \\Services}
 
@@ -526,3 +530,6 @@ Reviewer for IEEE Robotics and Automation Letters (RAL), 2019. \\
 
 
 
+\grid
+\grid
+\grid
