update CV and post

--- a/assets/pdf/cv/Sanghyun-cv.tex
+++ b/assets/pdf/cv/Sanghyun-cv.tex
@@ -39,9 +39,9 @@
 
 \section{\sc Current Affiliation}
 
-\textbf{Ph.D. Candidate} (expected in 2020.2) at the Department of Transdisciplinary Studies,\\
-Graduate School of Convergence Science and Technology, \\
-Seoul National University \\
+\textbf{Research Associate}, Statistical Machine Learning and Motor Control Group \\
+School of Informatics, \\
+The University of Edinburgh \\
 %\\
 %\textbf{Visiting Researcher} (until 2019.6) at the Gepetto Team,\\
 %Laboratory for Analysis and Architecture of Systems (LAAS), \\
@@ -57,9 +57,9 @@ Seoul National University \\
 %Stanford University & {\it E-mail:}  park73@ai.stanford.edu\\       
 %Stanford, CA  94305 USA  & {\it WWW:} ai.stanford.edu/\verb+~+park73 \\     
 %\end{tabular}
-{\it Address:} Gwanggyo-ro 145 D-312, Suwon, Seoul \\
-{\it E-mail:}  ggory15@snu.ac.kr\\       
-{\it Phone:}  82-10-5366-4998 (Korea)\\            
+{\it Address:} 105/7 Causewayside, Edinburgh, United Kingdomg\\
+{\it E-mail:}  sanghyun.kim@ed.ac.uk\\       
+{\it Phone:}  +44-07305-403313\\            
 {\it WWW:}  \url{http://ggory15.github.io} \textit{(for my projects)}, \url{http://github.com/ggory15} \textit{(for source codes)}
 
 
@@ -70,11 +70,11 @@ Seoul National University \\
 
 \section{\sc Education}
 
-{\bf Seoul National University}, Seoul, Korea  \hfill {\bf 2012.3 - Presence} \\
+{\bf Seoul National University}, Seoul, Korea  \hfill {\bf 2012.3 - 2020.2} \\
 \vspace*{-.1in}
 \begin{list1}
 \vspace*{-.05in}
-\item[] Ph.D. Candidate of Dept of Trandisciplinary Studies 
+\item[] Ph.D.  of Dept of Trandisciplinary Studies 
 \begin{list2}
 %\vspace*{.05in}
 \item Lab: Dynamic Robotic System Lab (DYROS Lab, \url{https://dyros.snu.ac.kr})
@@ -163,7 +163,7 @@ Seoul National University \\
 \vspace{-.3cm}
 
 
-\textbf{\emph { Multiple Task Execution Algorithm}} \hfill  {\bf 2017  - Presence}
+\textbf{\emph { Multiple Task Execution Algorithm}} \hfill  {\bf 2017  - 2020}
 \begin{list2}
 \item Dynamic task transition algorithm to generate complex behavior.
 \item Continuous transitions between arbitrary tasks using the activation parameter [J5].
@@ -279,7 +279,7 @@ Seoul National University \\
 
 \textbf{\emph { Artificial intelligence robot CPR system}} \hfill {\bf 2014  - 2016}
 \begin{list2}
-\item Robot manipulator to perform CPR in emergency situations [P1, P3, J3]
+\item Robot manipulator to perform CPR in emergency situations [P2, J3]
 \item Automatic System based biological data from a patient
 \item Simulation on mannequin and animal test
 \begin{itemize}
@@ -291,7 +291,7 @@ Seoul National University \\
 
 \textbf{\emph { Robot hand tele-operation control}} \hfill {\bf 2012  - 2014}
 \begin{list2}
-\item Robot hand synergy mapping using multi-factor model [P2, J1, W1]
+\item Robot hand synergy mapping using multi-factor model [P1, J1, W1]
 \item Extracting synergy by considering individual characteristic as well as grasping motion
 \begin{itemize}
 \vspace*{-.05in}
@@ -349,8 +349,8 @@ Seoul National University \\
 {\bf Software Experience} \\
 \textbf{\emph { Programming Skills}}
 \begin{list2}
-\item Intermediate C++, Python, and Matlab programming for robotics (Windows, Ubuntu 16.04)
-\item V-Rep, MuJoCo, Gazebo, and Pinocchio for robotic simulation
+\item Intermediate C++, Python, and Matlab programming for robotics (Windows, Ubuntu 18.04)
+\item V-Rep, MuJoCo, Gazebo, and PyBullet for robotic simulation
 \end{list2}
 \vspace{-0.3cm}
 \textbf{\emph { Libraries}}
@@ -362,6 +362,7 @@ Seoul National University \\
 \end{list2}
 
 \section{\sc Honors and Awards} 
+\textbf{Best thesis award} from Seoul National University, 2020.\\
 \textbf{Best conference paper award} in IEEE/ASME International Conference on Advanced Robotics and Mechatronics, 2019.\\
 \textbf{Korean government grant} for Visiting Scholar of LAAS-CNRS, 2018. \\
 \textbf{Best paper award} in Journal of Korea Robotics Society (JKROS), 2018.\\
@@ -369,15 +370,12 @@ Seoul National University \\
 
 
 \section{\sc Patents} 
-[P3]  \textbf{Sanghyun Kim} \textit{et al}. Automatic cardiopulmonary resuscitation device and control method therefor, US Patent, No. 20190029919A1, CN Patent, No. 108697572A, EU Patent, No. 3409258A1, 2019
+[P2]  \textbf{Sanghyun Kim} \textit{et al}. Automatic cardiopulmonary resuscitation device and control method therefor, US Patent, No. 20190029919A1, CN Patent, No. 108697572A, EU Patent, No. 3409258A1, 2019
 
-[P2] \textbf{Sanghyun Kim}, {Jaeheung Park}, Mingon Kim, Jimin Lee, Jounghuem Kwon, Bumjae You. 
+[P1] \textbf{Sanghyun Kim}, {Jaeheung Park}, Mingon Kim, Jimin Lee, Jounghuem Kwon, Bumjae You. 
 APPARATUS FOR ESTIMATING GRASPING POSTURE AND GRASPING FORCE.
 Korea Patent, No.10-2016-0075150, 2016.
 
-[P1] \textbf{Sanghyun Kim} \textit{et al}. 
-APPARATUS FOR AUTOMATIC CARDIOVASCULAR PULMONARY RESCITATION.
-Korea Patent, No.10-2016-0011876, 2016.
 %\vspace*{-2.5mm}
 %NSF Vertical Integration of Research and Education in Statistics and
 %Mathematical Sciences\\ (VIGRE) teaching fellowship.
@@ -466,6 +464,11 @@ Transactions of the KSME,
 Vol. 35, No. 8, 2010.
 
 \section{\sc Domestic Conference Articles}
+[DC9] S. Park, K. Jang, S. Kim, \textbf{S. Kim}, and J. Park.
+nverse Kinematics Minimizing JointsTorque with Given Target Wrench,
+The 15th Korea Robotics Society Annual Conference (KROC), Korea, 2020.
+
+
 [DC8] S. Y. Lee, S. Park, K. Jang, \textbf{S. Kim}, S. Kim, and J. Park.
 A Comparative Study of Tracking Control with Closed Loop Inverse Kinematics Algorithm,
 The 14th Korea Robotics Society Annual Conference (KROC), Korea, 2019.
@@ -514,8 +517,9 @@ Tokyo, Japan, 3 Nov 2013.
 
 \section{\sc Ongoing Papers}
 
-[O1] Y. Lee, \textbf{S. Kim},  J. Park, N. Tsagarakis, and J. Lee, EOS-WBC: Enhanced Operational-space Based Whole Body Control Framework under Inequality Constraints, 
-IEEE Transactions on Robotics, under review, 2019.
+[O1] Y. Lee, \textbf{S. Kim},  J. Park, N. Tsagarakis, and J. Lee, EOS-WBC: Enhanced Operational-space Based Whole Body Control Framework under Inequality Constraints, Roboics and Autonomous Systems, under review, 2020.
+
+[O2] S. Hong, K. Jang,  \textbf{S. Kim},  J. Park, Regularized Hierarchical Quadratic Program for Real-Time Whole Body Motion Generation, Transaction on Mechatronics, minor revision, 2020.
 
 \section{\sc Academic \\Services}
 
@@ -524,6 +528,7 @@ Reviewer for IEEE/RSJ International Conference on Intelligent Robots and Systems
 Reviewer for IEEE International Conference on Ubiquitous Robots (UR), 2018.\\
 Reviewer for IEEE International Conference on Robotics and Automation (ICRA), 2019. \\
 Reviewer for IEEE Robotics and Automation Letters (RAL), 2019. \\
+Reviewer for IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2020. \\
 \end{resume}
 \end{document}
 
