update cv and tmech

--- a/assets/pdf/cv/Sanghyun-cv.tex
+++ b/assets/pdf/cv/Sanghyun-cv.tex
@@ -39,9 +39,9 @@
 
 \section{\sc Current Affiliation}
 
-\textbf{Research Associate}, Statistical Machine Learning and Motor Control Group \\
-School of Informatics, \\
-The University of Edinburgh \\
+\textbf{Senior Researcher}, Dept. of AI Machinery, \\
+System Engineering Research Division, \\
+Korea Institute of Machinery \& Materials (KIMM) 
 %\\
 %\textbf{Visiting Researcher} (until 2019.6) at the Gepetto Team,\\
 %Laboratory for Analysis and Architecture of Systems (LAAS), \\
@@ -90,7 +90,19 @@ The University of Edinburgh \\
 \item[] B.A., Mechanical Engineering,  March, 2012
 \end{list1}
 
-\section{\sc Visiting \\ Experience}
+\section{\sc Research \\Experience}
+
+{\bf University of Edinburgh}, United Kingdom  \hfill {\bf 2020.4 - 2020.9} \\
+\vspace*{-.1in}
+\begin{list1}
+\vspace*{-.05in}
+\item[] Research Associate (Post-doctoral Researcher)
+\begin{list2}
+\item Lab:  Statistical Machine Learning and Motor Control Group (\url{http://web.inf.ed.ac.uk/slmc})
+\item Advisor: Prof. Sethu Vijayakumar (sethu.vijayakumar@ed.ac.uk)
+\end{list2}
+\end{list1}
+
 {\bf Centre National de la Recherche Scientifique (CNRS)}, France  \hfill {\bf 2018.8 - 2019.6} \\
 \vspace*{-.1in}
 \begin{list1}
@@ -110,7 +122,7 @@ The University of Edinburgh \\
 \item[] Student Internship
 \begin{list2}
 \item Lab: Haptic Team (\url{http://dyconlab.gist.ac.kr})
-\item Advisor: Professor Jeha Ryu (ryu@gist.ac.kr)
+\item Advisor: Prof. Jeha Ryu (ryu@gist.ac.kr)
 \end{list2}
 \end{list1}
 
@@ -210,7 +222,7 @@ The University of Edinburgh \\
 \vspace*{-.05in}
 \item[\checkmark] Using operational-space controller [C2]
 \vspace*{-.05in}
-\item[\checkmark] Using hierarchical QP-based controller [J4]
+\item[\checkmark] Using hierarchical QP-based controller [J4, J6]
 \vspace*{-.05in}
 \item[\checkmark] Using DDP-based controller
 \vspace*{-.05in}
@@ -382,7 +394,9 @@ Korea Patent, No.10-2016-0075150, 2016.
 %
 
 \section{\sc International Journal Articles}
-
+[J6] S. Hong, K. Jang, \textbf{S. Kim}, and J. Park.
+Regularized Hierarchical Quadratic Program for Real-Time Whole-Body Motion Generation ,
+IEEE/ASME Transactions on Mechatronics, 2020. 10 (Early Access)
 
 [J5] \textbf{S. Kim}, M. Kim, J. Kim, S, Kim, and J. Park.
 Grasping Force Prediction by EMG Signals and Arm Posture: Tensor Decomposition Based Approach,
