--- a/assets/pdf/cv/Sanghyun-cv.tex
+++ b/assets/pdf/cv/Sanghyun-cv.tex
@@ -57,9 +57,9 @@ Korea Institute of Machinery \& Materials (KIMM)
 %Stanford University & {\it E-mail:}  park73@ai.stanford.edu\\       
 %Stanford, CA  94305 USA  & {\it WWW:} ai.stanford.edu/\verb+~+park73 \\     
 %\end{tabular}
-{\it Address:} 105/7 Causewayside, Edinburgh, United Kingdomg\\
-{\it E-mail:}  sanghyun.kim@ed.ac.uk\\       
-{\it Phone:}  +44-07305-403313\\            
+{\it Address:} 45 Oncheon-ro, Yuseong-gu, Daejeon, Republic of Korea (34186)\\
+{\it E-mail:}  kim87@kimm.re.kr\\       
+{\it Phone:}  +82-10-5366-4998\\            
 {\it WWW:}  \url{http://ggory15.github.io} \textit{(for my projects)}, \url{http://github.com/ggory15} \textit{(for source codes)}
 
 
@@ -394,6 +394,14 @@ Korea Patent, No.10-2016-0075150, 2016.
 %
 
 \section{\sc International Journal Articles}
+[J8] Y. Lee, \textbf{S. Kim}, J. Park, N. Tsagarakis, and J. Lee.
+ Whole-body Control Framework based on the Operational Space Formulation under Inequality Constraints via Task-oriented Optimisation, 
+IEEE Access, 2021. 03 (Early Access)
+
+[J7] K. Jang, \textbf{S. Kim}, and J. Park
+Reactive Self-Collision Avoidance for a Differentially Driven Mobile Manipulator, 
+Sensors, Vol. 21, No. 3, 2021. 02 
+
 [J6] S. Hong, K. Jang, \textbf{S. Kim}, and J. Park.
 Regularized Hierarchical Quadratic Program for Real-Time Whole-Body Motion Generation ,
 IEEE/ASME Transactions on Mechatronics, 2020. 10 (Early Access)
