--- a/assets/pdf/cv/Sanghyun-cv.tex
+++ b/assets/pdf/cv/Sanghyun-cv.tex
@@ -140,7 +140,7 @@ Korea Institute of Machinery \& Materials (KIMM)
 \vspace{-.3cm}
 \textbf{\emph {Whole-body Planning for Humanoid}} \hfill {\bf 2018 - Presence}
 \begin{list2}
-\item (Ongoing Work) Generating contact sequence, CoM trajectory, feet trajectories, and whole-body trajectory for legged robots. 
+\item (Ongoing Work) Generating contact sequence, CoM trajectory, feet trajectories, and whole-body trajectory for legged robots [C9]. 
 \begin{itemize}
 \vspace*{-.05in}
 \item[\checkmark] Video: \url{https://youtu.be/JpwigzMQg6E}
@@ -396,7 +396,7 @@ Korea Patent, No.10-2016-0075150, 2016.
 \section{\sc International Journal Articles}
 [J8] Y. Lee, \textbf{S. Kim}, J. Park, N. Tsagarakis, and J. Lee.
  Whole-body Control Framework based on the Operational Space Formulation under Inequality Constraints via Task-oriented Optimisation, 
-IEEE Access, 2021. 03 (Early Access)
+IEEE Access, Vol. 9, pp. 39813-39826, 2021. 03 
 
 [J7] K. Jang, \textbf{S. Kim}, and J. Park
 Reactive Self-Collision Avoidance for a Differentially Driven Mobile Manipulator, 
@@ -423,6 +423,9 @@ Robot Hand Synergy Mapping Using Multi-factor Model and EMG signal.
 (with International Symposium on Experimental Robotics 2014), Springer, pp.671-683, 2015.11
 
 \section{\sc International Conference Articles}
+
+[C9] J. Wang, \textbf{S. Kim}, S. Vijayakumar and S. Tonneau, Multi-Fidelity Receding Horizon Planning for Multi-Contact Locomotion. The 2020 IEEE-RAS International Conference on Humanoid Robots, Munich, Germany, 2021.
+
 [C8] \textbf{S. Kim}, K. Jang, S. Park, Y. Lee, S. Y. Lee, and J. Park, Whole-body Control of Non-holonomic Mobile Manipulator Based on Hierarchical Quadratic Programming and Continuous Task Transition. IEEE International Conference on Advanced Robotics and Mechatronics (ARM), Osaka, Japan, 2019, \textbf{Best Conference Paper Award}
 
 [C7] \textbf{S. Kim}, J. Kim, and J. Park.
@@ -437,7 +440,6 @@ International Conference on Robotics and Automation (ICRA), Australia, 2018.
 Human Motion Imitation for Humanoid by Recurrent Neural Network.
 The 13th International Conference on Ubiquitous Robots and Ambient Intelligence,
 Xian, China, 19-22 Aug, 2017.
-
 
 [C4] J. Jung, J. Kim, \textbf{S. Kim}, W. Kwon, S. Na, K. Kim, J. Lee, G. Suh, and J. Park.
 Application of Robot Manipulator for Cardiopulmonary Resuscitation,  International Symposium on Experimental Robotics 2016, Springer, pp. 266-274, 2017.03
